# experiments-LUMI-shared

BUGS/C++/OpenMP-C++20/: README.md  test.cpp
BUGS/CMake/cpeAMD/: CMakeLists.txt  README.md  cmake_failure_01.sh  cmake_failure_02.sh  cmake_failure_03.sh  cmake_failure_04.sh  cmake_success_01.sh  cmake_success_02.sh  compile_01.sh  manual_success_01.sh
BUGS/Cray_OMP/25.03-ToolsInterface/: README.md  compile.sh  run_tests.sh
BUGS/Cray_OMP/25.03-ToolsInterface/copyprivate/: clang21_output.txt  cpe2503_output.txt  test.f90
BUGS/Cray_OMP/25.03-ToolsInterface/task/: amdclang_output.txt  cpe2503_output.txt  test.c
BUGS/Cray_OMP/25.03-ToolsInterface/taskloop/: amdclang_output.txt  cpe2503_output.txt  test.c
BUGS/EasyBuild/: bug-heredoc-1.0.eb
BUGS/Fortran/recursive_reshape/: README.md  parameter_fail.f90  parameter_works1.f90  parameter_works2.f90  parameter_works3.f90
BUGS/Fortran/trim_with_merge/: README.md  trim_merge.f90
BUGS/uint32_t/: README.md  reproducer.c
EESSI/: README.md  test-environment.slurm
